--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -215,6 +215,11 @@ const BASE = import.meta.env.BASE_URL ?? '/';
             <a href="https://www.linkedin.com/in/alexis-fiska" target="_blank" rel="noopener" class="p-2 rounded-lg hover:bg-neutral-100 dark:hover:bg-neutral-800" aria-label="LinkedIn">
               <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" height="18px" viewBox="0 0 93 93" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M11.185,0.08C5.004,0.08,0.001,5.092,0,11.259c0,6.173,5.003,11.184,11.186,11.184c6.166,0,11.176-5.011,11.176-11.184 C22.362,5.091,17.351,0.08,11.185,0.08z"></path> <rect x="1.538" y="30.926" width="19.287" height="62.054"></rect> <path d="M69.925,29.383c-9.382,0-15.673,5.144-18.248,10.022h-0.258v-8.479H32.921H32.92v62.053h19.27V62.281 c0-8.093,1.541-15.932,11.575-15.932c9.89,0,10.022,9.256,10.022,16.451v30.178H93.06V58.942 C93.06,42.235,89.455,29.383,69.925,29.383z"></path> </g> </g> </g></svg>
             </a>
+			<a href="https://x.com/FiskaAlexis" target="_blank" rel="noopener" class="p-2 rounded-lg hover:bg-neutral-100 dark:hover:bg-neutral-800" aria-label="X">
+              <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+ <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
+</svg>
+            </a>
           </div>
         </div>
       </div>
