--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -31,11 +31,7 @@ const t = {
            transition"
   >
     <!-- Simple Icons LinkedIn (monochrome), teinté via currentColor -->
-    <svg role="img" viewBox="0 0 24 24" class="h-5 w-5" aria-hidden="true">
-      <title>LinkedIn</title>
-      <path fill="currentColor"
-        d="M20.447 20.452h-3.554V14.39c0-1.449-.027-3.317-2.022-3.317-2.022 0-2.331 1.58-2.331 3.214v6.165H8.987V9h3.414v1.561h.049c.476-.9 1.637-1.849 3.372-1.849 3.606 0 4.271 2.372 4.271 5.459v6.281zM5.337 7.433A2.07 2.07 0 1 1 5.34 3.296a2.07 2.07 0 0 1-.003 4.137zM6.777 20.452H3.894V9h2.883v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
-    </svg>
+	<svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" height="18px" viewBox="0 0 93 93" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M11.185,0.08C5.004,0.08,0.001,5.092,0,11.259c0,6.173,5.003,11.184,11.186,11.184c6.166,0,11.176-5.011,11.176-11.184 C22.362,5.091,17.351,0.08,11.185,0.08z"></path> <rect x="1.538" y="30.926" width="19.287" height="62.054"></rect> <path d="M69.925,29.383c-9.382,0-15.673,5.144-18.248,10.022h-0.258v-8.479H32.921H32.92v62.053h19.27V62.281 c0-8.093,1.541-15.932,11.575-15.932c9.89,0,10.022,9.256,10.022,16.451v30.178H93.06V58.942 C93.06,42.235,89.455,29.383,69.925,29.383z"></path> </g> </g> </g></svg>
   </a>
 
   <!-- GitHub -->
@@ -81,9 +77,10 @@ const t = {
            transition"
   >
     <!-- Simple Icons X (monochrome), teinté via currentColor -->
-    <svg role="img" viewBox="0 0 24 24" class="h-5 w-5" aria-hidden="true">
+     <svg role="img" viewBox="0 0 300 271" class="h-5 w-5" aria-hidden="true">
       <title>X</title>
-      <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
-    </svg>
+      <path fill="currentColor"
+      d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
+  </svg>
   </a>
 </div>
